Fixed column alignment. Adding new hourly data used to push default columns off center.

--- a/src/main/resources/com/example/weatherapp/MainSceneCSS.css
+++ b/src/main/resources/com/example/weatherapp/MainSceneCSS.css
@@ -1,4 +1,9 @@
-.list-view .scroll-bar:vertical {
-    -fx-scale-x: 0;
-    -fx-padding: 0px;
+#gridPane {
+    -fx-background-color: cornflowerblue;
+    -fx-alignment: center;
+    -fx-padding: 10.0 3.0 5.0 0.0;
+}
+.root {
+    -fx-font-size: 9pt;
+    -fx-font-family: "Arial";
 }
